--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -17,3 +17,8 @@ body {
   background-repeat:no-repeat;
   height: 192px;
 }
+
+li.L0,li.L1,li.L2,li.L3,li.L5,li.L6,li.L7,li.L8
+{
+  list-style-type: decimal;
+}
